@@ -12,6 +12,7 @@ version 0.58:
 	  (Thanks, Ari Pollak)
 	* Added helpful stuff to the Help menu.
 	* Self-aliasing from the account editor.
+	* Better selection in GtkIMHtml (Thanks Ben Miller)
 
 version 0.57 (04/25/2002):
 	* New authorization method for Yahoo!
